--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "Fullstack React GraphQL TypeScript Tutorial",
+  "name": "fullstack-react-graphql-typescript-tutorial",
   "version": "1.0.0",
   "main": "index.js",
   "author": "wchamara <chamara.weerasinghe@my.sliit.lk>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon ./dist/index.js",
+    "start2": "ts-node ./src/index.ts",
+    "dev2": "nodemon --exec ts-node ./src/index.ts",
+    "watch": "tsc -w"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.4",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
+  }
 }
