--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon ./dist/index.js",
     "start2": "ts-node ./src/index.ts",
     "dev2": "nodemon --exec ts-node ./src/index.ts",
-    "watch": "tsc -w"
+    "watch": "npx tsc -w"
   },
   "mikro-orm": {
     "useTsNode": true,
